# bot

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  Shexaaa  config.toml  db.toml  sqlx-data.json
.github/workflows/: deploy.yml  release.yml  rust.yml
db/: db.sqlite3  down.sql  sqlite3.db
db/migrations/2020-01-11-181333_log_channels/: up.sql
db/src/: schema.rs
src/: commands.rs  data.rs  db.rs  events.rs  functions.rs  listeners.rs  main.rs  prelude.rs  util.rs  utils.rs
src/commands/: admin.rs  avatar.rs  ban.rs  fun.rs  gambling.rs  games.rs  general.rs  generic.rs  help.rs  kick.rs  leaderboard.rs  log.rs  ping.rs  prefix.rs  roles.rs  settings.rs  user.rs  utilities.rs  utility.rs
src/commands/admin/: ban.rs  exec.rs  kick.rs  purge.rs  sql.rs
src/commands/config/: log.rs  mod.rs
src/commands/fun/: avatar.rs  emoji.rs  guild.rs  leaderboard.rs  mod.rs  setmoney.rs  user.rs
src/commands/gambling/: betroll.rs  flip.rs  give.rs  money.rs  setmoney.rs
src/commands/games/: betroll.rs  flip.rs  give.rs  (+2 more)
src/data/: cache.rs  db.rs  error.rs  mod.rs
src/db/: leaderboard.rs  log.rs  models.rs  money.rs  prefix.rs  reactionroles.rs  schema.rs
src/listeners/: cache_ready.rs  category_create.rs  category_delete.rs  channel_create.rs  channel_delete.rs  guild_ban_addition.rs  guild_member_addition.rs  guild_member_removal.rs  guild_member_update.rs  message.rs  message_delete.rs  message_update.rs  presence_update.rs  ready.rs  voice_state_update.rs
src/utils/: framework.rs  macros.rs  parse.rs
(+21 files in other folders)
