[package]
name = "bot"
version = "0.1.0"
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
edition = "2018"


[dependencies]
serenity = { version = "0.10", features = ["collector"] }
tokio  = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.24", features = ["bundled"] }
rand = "0.7"
anyhow = "1.0"
dotenv = "0.15"
config = "0.10"
log = "0.4"
env_logger = "0.8"
